<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">



    <group android:checkableBehavior="single">
    <item
        android:id="@+id/Home"
        android:icon="@drawable/ic_home"
        android:title="@string/home"/>

    <item
        android:id="@+id/Settings"
        android:title="@string/settings"
        android:icon="@drawable/ic_baseline_settings_24"/>



    </group>

    <item android:title="About">
        <menu>
            <group android:checkableBehavior="single">
            <item
                android:id="@+id/About"
                android:title="About us"
                android:icon="@drawable/ic_contact_support"/>
            <item
                android:id="@+id/contact_us"
                android:title="Contact us"
                android:icon="@drawable/ic_baseline_phone"/>
            </group>
        </menu>
    </item>
    <item android:title="Settings">
        <menu>
            <group android:checkableBehavior="single">
                <item
                    android:id="@+id/Logout"
                    android:icon="@drawable/ic_baseline_power_settings_new_24"
                    android:title="@string/logout"/>
            </group>
        </menu>
    </item>

</menu>